--- a/view/frontend/templates/blog.phtml
+++ b/view/frontend/templates/blog.phtml
@@ -14,7 +14,7 @@ $blogViewModel = $block->getData('ViewModel');
                 "components": {
                     "blog": {
                         "component": "BlogModule_Blog/js/blog",
-                        "posts": <?=  $blogViewModel->getPostsJson() ?>
+                        "posts": <?=  $blogViewModel->getPostsJson() ?>.
                     }
                 }
             }
